--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -706,9 +706,10 @@ $btn-mb: 0.5rem;
   width: $sidebar-width;
   z-index: 99;
   // background: var(--sidebar-bg);
-  background: url('https://images.unsplash.com/photo-1590536685202-b550011702bc?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
-  background-size: cover;
-  background-position-x : center;
+  // 추후 배경화면 적용 시 url 말고 local 경로로 잡을 것
+  // background: url('https://images.unsplash.com/photo-1590536685202-b550011702bc?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+  // background-size: cover;
+  // background-position-x : center;
   border-right: 1px solid var(--sidebar-border-color);
 
   /* Hide scrollbar for Chrome, Safari and Opera */
