--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -111,6 +111,22 @@ tail_includes:
       </div>
     {% endif %}
 
+    <script src="https://giscus.app/client.js"
+        data-repo="hobbyscripterII/hobbyscripterII.github.io"
+        data-repo-id="R_kgDOLiyyYw"
+        data-category="General"
+        data-category-id="DIC_kwDOLiyyY84CeJUf"
+        data-mapping="title"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="preferred_color_scheme"
+        data-lang="ko"
+        crossorigin="anonymous"
+        async>
+    </script>
+
     <!-- tags -->
     {% if page.tags.size > 0 %}
       <div class="post-tags">
